--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 html, body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: var(--text-color);
